# moe-calculator

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  INSTALL.md  LICENSE.md  README.md  RESEARCH.md  TASKS.md  pyproject.toml  requirements-dev.txt
.claude/: settings.json
.claude/hooks/: plan-saver-register.sh  (+1 more)
TASKS/: build-reproducibility-hardening.md  code-cleanups-2026-07.md  garage-box-style-HANDOFF.md  garage-box-style-match.md  garage-bridge-lifecycle.md  garage-widget-ammo-border.md  garage-widget-input-steal-cleanup.md  hover-stats-tooltip.md  in-battle-hide-when-spectating.md  in-battle-moe-handoff.md  in-battle-moe-mount-rework.md  in-battle-moe-panel.md  in-battle-moe-styling.md  in-battle-row-backdrop-alignment-HANDOFF.md  in-battle-rtl-layout.md  in-battle-single-double-row.md  in-battle-widget-colors.md  mod-positioning-handoff.md  mod-positioning.md  percent-no-rounding.md  phase3-drag-wip.patch  tooltip-handoff.md  upgrade-2.3.1.0.json  widget-polish-handoff.md
installer/: build_installer.ps1  moe_calculator-setup.iss  readme.moe.txt  readme.wgmods.txt
src/: meta.xml
tests/: conftest.py  test_adapter.py  test_baseline_cache.py  test_battle_adapter.py  test_battle_builder.py  test_builder.py  test_calib_cache.py  test_engine_adapter.py  test_fetch_list.py  test_gameface_bridge.py  test_i18n.py  test_k_estimator.py  test_logging_gate.py  test_mod_settings.py  test_moe_data.py  test_moe_estimate.py  test_moe_offline.py  test_moe_tomato.py  test_moe_wgapi.py  test_placement.py  test_positioning.py  test_rounding.py  test_settings_i18n.py
(+99 files in other folders)
